--- a/index.html
+++ b/index.html
@@ -4,133 +4,199 @@
         <meta charset="utf-8">
         <title></title>
         <link rel="stylesheet" href="style.css">
+        <style>
+          #container{
+                padding: 15px 110px 15px 110px;
+                width: 80%;
+          }
+          #content{
+                float: none;
+                padding: 10px 70px 45px 40px;
+                margin: auto;
+          }
+          #adjustment{
+            float: left;
+            margin: -10px 0px -10px 0px;
+            width: 100%;
+          }
+          #first-code-container{
+            float: left;
+            margin: -10px -250px -10px -290px;
+            width: 100%;
+          }
+          #blockquotes{
+            padding: 0 25px;
+
+          }
+          #hal{
+            padding: 0 0 0 48px;
+          }
+          pre{
+            padding: 10px;
+          }
+          .table-header{
+                font-family: Verdana;
+          }
+        </style>
     </head>
     <body>
         <div id="wrapper">
     	    <div id="main">
     		    <div id="container">
     			    <div id="content" role="main">
-                <p>
-                  Below is just about everything you’ll need to style in the theme. Check the source code to see the many embedded elements within paragraphs.
-                </p>
+                  <div class="text1">
+                    <p>
+                      Below is just about everything you’ll need to style in the theme.
+                      Check the source code to see the many embedded elements within paragraphs.
+                    </p>
+                  </div>
                 <hr>
-                <h1>
-                  Heading 1
-                </h1>
-                <h2>
-                  Heading 2
-                </h2>
-                <h3>
-                  Heading 3
-                </h3>
-                <h4>
-                  Heading 4
-                </h4>
-                <h5>
-                  Heading 5
-                </h5>
-                <h6>
-                  Heading 6
-                </h6>
+                  <div class="heading">
+                    <h1>
+                      Heading 1
+                    </h1>
+                      <h2>
+                        Heading 2
+                      </h2>
+                        <h3>
+                          Heading 3
+                        </h3>
+                          <h4>
+                            Heading 4
+                          </h4>
+                            <h5>
+                              Heading 5
+                            </h5>
+                              <h6>
+                                Heading 6
+                              </h6>
+                    </div>
                 <hr>
-
-                <p>
-                   Lorem ipsum dolor sit amet, test link adipiscing elit. This is strong. 
-                   Nullam dignissim convallis est. Quisque aliquam. This is emphasized. 
-                   Donec faucibus. Nunc iaculis suscipit dui. 53 = 125. Water is H2O. Nam
-                   sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida
-                   vehicula, nisl. The New York Times (That’s a citation). Underline. 
-                   Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy.
-                   Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat
-                   in, nunc. Morbi imperdiet augue quis tellus.
-                </p>
-                <p>
-                   HTML and CSS are our tools. Mauris a ante. Suspendisse quam sem, consequat
-                   at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
-                   Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu
-                   volutpat enim diam eget metus. To copy a file type COPY filename.  Let’s
-                   make that 7. This text has been struck.
-                </p>
+                  <div class="text2">
+                    <p>
+                       Lorem ipsum dolor sit amet, <a link href="#">test link</a> adipiscing elit. 
+                       <b>This is strong.</b>Nullam dignissim convallis est. Quisque aliquam.
+                       <i>This isemphasized.</i> Donec faucibus. Nunc iaculis suscipit dui.
+                       5<sup>3</sup> = 125. Water is H<sub>2</sub>O.Nam sit amet sem. Aliquam libero
+                       nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl. <cite>The New York
+                       Times</cite> (That’s a citation).<u> Underline.</u> Maecenas ornare tortor.
+                       Donec sed tellus eget sapien fringilla nonummy.Mauris a ante. Suspendisse quam
+                       sem, consequat at,commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis
+                       tellus.
+                    </p>
+                    <p>
+                       <abbr>HTML</abbr> and <abbr>CSS</abbr> are our tools. Mauris a ante. Suspendisse
+                       quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue
+                       quis tellus.Praesent mattis, massa quis luctus fermentum, turpis mi volutpat
+                       justo, eu volutpat enim diam eget metus. To copy a file type COPY <em>filename.</em>
+                       <strike>Dinner's at 5:00.</strike> <mark>Let’s make that 7.</mark> This text has been struck.
+                    </p>
+                  </div>
                 <hr>
-                <h2>List Types</h2>
-                <h3>Definition List</h3>
-                <b>
-                  Definition List Title
-                </b>
-                <p>This is a definition list division.</p>
-                <b>
-                  Definition
-                </b>
-                <p>
-                  An exact statement or description of the nature, scope, or meaning of something:
-                  our definition of what constitutes poetry.
-                </p>
-
-                <h3>Ordered List</h3>
-                <ol>
-                  <li>List Item 1</li>
-                  <li>List Item 2</li>
-                    <ol type="AI">
-                      <li>Nested list item A</li>
-                      <li>Nested list item B</li>
-                    </ol>
-                  <li>List Item 3</li>
-                </ol>
-
-                <h3>Unordered List</h3>
-                <ul>
-                  <li>List Item 1</li>
-                  <li>List Item 2</li>
-                    <ul>
-                      <li>Nested list item A</li>
-                      <li>Nested list item B</li>
-                    </ul>
-                  <li>List Item 3</li>
-                </ul>
+                  <div class="list-type">
+                    <h2>List Types</h2>
+                      <h3>Definition List</h3>
+                        <b>
+                          Definition List Title
+                        </b>
+                          <p>This is a definition list division.</p>
+                        <b>
+                          Definition
+                        </b>
+                          <p>
+                            An exact statement or description of the nature, scope, or meaning of something:
+                            <cite>our definition of what constitutes poetry.</cite>
+                          </p>
+                      <h3>Ordered List</h3>
+                        <ol>
+                          <li>List Item 1</li>
+                          <li>List Item 2</li>
+                            <ol type="AI">
+                              <li>Nested list item A</li>
+                              <li>Nested list item B</li>
+                            </ol>
+                          <li>List Item 3</li>
+                        </ol>
+                      <h3>Unordered List</h3>
+                      <ul>
+                        <li>List Item 1</li>
+                        <li>List Item 2</li>
+                          <ul>
+                            <li>Nested list item A</li>
+                            <li>Nested list item B</li>
+                          </ul>
+                        <li>List Item 3</li>
+                      </ul>
+                  </div>
                 <hr>
-                <h2>Table</h2>
-                <table>
-
-                </table>
+                  <div class="table">
+                    <h2>Table</h2>
+                      <table>
+                          <tr>
+                            <th class="table-header">Table Header 1</th><th class="table-header">Table Header 2</th><th class="table-header">Table Header 3</th>
+                          </tr>
+                          <tr>
+                           <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                           <tr>
+                            <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                           </tr>
+                           <tr>
+                            <td>Division 1</td><td>Division 2</td><td>Division 3</td>
+                           </tr>
+                          </tr>
+                      </table>
                 <hr>
-                <h2>Preformatted Text</h2>
-                <p>Typographically, preformatted text is not the same thing as code.
-                   Sometimes, a faithful execution of the text requires preformatted
-                   text that may not have anything to do with code. Most browsers use
-                   Courier and that’s a good default — with one slight adjustment,
-                   Courier 10 Pitch over regular Courier for Linux users. For example:</p>
-                <pre>
-                   <b>“Beware the Jabberwock, my son!
-                                 The jaws that bite, the claws that catch!
-                                Beware the Jubjub bird, and shun
-                            The frumious Bandersnatch!”
-                   </b>
-                </pre>
-                <h3>Code</h3>
+                  <div class="preformatted-text">
+                    <h2>Preformatted Text</h2>
+                      <p>Typographically, preformatted text is not the same thing as code.
+                         Sometimes, a faithful execution of the text requires preformatted
+                         text that may not have anything to do with code. Most browsers use
+                         Courier and that’s a good default — with one slight adjustment,
+                         Courier 10 Pitch over regular Courier for Linux users. For example:</p>
+                         <div id="adjustment">
 
-                Code can be presented inline, like <?php bloginfo('stylesheet_url'); ?>,
-                or within a block. Because we have more specific typographic needs
-                for code, we’ll specify Consolas and Monaco ahead of the browser-defined
-                monospace font.
-                <pre>
-                #container {
-                        float: left;
-                        margin: 0 -240px 0 0;
-                        width: 100%;
-                }
-                </pre>
+                    <pre><font face="Comic Sans MS">
+      “Beware the Jabberwock, my son!
+              The jaws that bite, the claws that catch!
+      Beware the Jubjub bird, and shun
+              The frumious Bandersnatch!” </font>
+              </pre>
+                        </div>
+                          <h3>Code</h3>
+                          <p>Code can be presented inline, like <font face="Comic Sans MS"><?php bloginfo('stylesheet_url');?></font>,
+                          or within a block <code><рrе></code>. Because we have more specific typographic needs
+                          for code, we’ll specify Consolas and Monaco ahead of the browser-defined
+                          monospace font.</p>
+                            <code>
+                            <pre>
+                              <div id="first-code-container">
+                                  #container {
+                                        float: left;
+                                        margin: 0 -240px 0 0;
+                                        width: 100%;
+                                  }
+                              </div>
+                            </pre>
+                            </code>
+
+
+                  </div>
                 <hr>
-
-                Blockquotes
-
-                Let’s keep it simple. Italics are good to help set it off from the body text. Be sure to style the citation.
-                <blockquote>Good afternoon, gentlemen. I am a HAL 9000 computer. I became
-                            operational at the H.A.L. plant in Urbana, Illinois on the 12th of January
-                            1992. My instructor was Mr. Langley, and he taught me to sing a song. If
-                            you’d like to hear it I can sing it for you.</blockquote>
-
-                — HAL 9000
-
+                  <div id="Blockquotes">
+                    <h2>Blockquotes</h2>
+                      <p>Let’s keep it simple. Italics are good to help set it off from the body
+                         text. Be sure to style the citation.</p>
+                         <div id="second-code-container">
+                            <blockquote>Good afternoon, gentlemen. I am a HAL 9000 computer. I became
+                                        operational at the H.A.L. plant in Urbana, Illinois on the 12th of January
+                                        1992. My instructor was Mr. Langley, and he taught me to sing a song. If
+                                        you’d like to hear it I can sing it for you.
+                            </blockquote>
+                              <div id="hal">
+                                <br>
+                                    — <a link href="#">HAL 9000</a>
+                              </div>
+                        </div>
                     </div>
                 </div>
             </div>
