added parameters for teg<code> - home work#3 is done

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                        <abbr>HTML</abbr> and <abbr>CSS</abbr> are our tools. Mauris a ante. Suspendisse
                        quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue
                        quis tellus.Praesent mattis, massa quis luctus fermentum, turpis mi volutpat
-                       justo, eu volutpat enim diam eget metus. To copy a file type COPY <em>filename.</em>
+                       justo, eu volutpat enim diam eget metus. To copy a file type COPY <em><font face="Comic Sans MS">filename.</font></em>
                        <strike>Dinner's at 5:00.</strike> <mark>Let’s make that 7.</mark> This text has been struck.
                     </p>
                   </div>
@@ -163,7 +163,7 @@
               </pre>
                         </div>
                           <h3>Code</h3>
-                          <p>Code can be presented inline, like <font face="Comic Sans MS"><?php bloginfo('stylesheet_url');?></font>,
+                          <p>Code can be presented inline, like <code>&lsaquo;?php bloginfo('stylesheet_url');?&rsaquo;</code>,
                           or within a block <code><рrе></code>. Because we have more specific typographic needs
                           for code, we’ll specify Consolas and Monaco ahead of the browser-defined
                           monospace font.</p>
