--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                        quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue
                        quis tellus.Praesent mattis, massa quis luctus fermentum, turpis mi volutpat
                        justo, eu volutpat enim diam eget metus. To copy a file type COPY <em><font face="Comic Sans MS">filename.</font></em>
-                       <strike>Dinner's at 5:00.</strike> <mark>Let’s make that 7.</mark> This text has been struck.
+                       <strike>Dinner's at 5:00.</strike> <span style="background: #fdffbd">Let’s make that 7.</span> This text has been struck.
                     </p>
                   </div>
                 <hr>
